--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "css-to-angular-animations-and-styles",
-  "version": "1.2.0",
+  "name": "css-angular",
+  "version": "2.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
