--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
   "name": "css-angular",
   "version": "2.0.0",
-  "description": "",
+  "description": "CSS to Angular Animations is JavaScript Node.js cli to convert CSS to Angular Animations ready to use, reads .css file and outputs .ts file",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "MoustafaMohsen",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MoustafaMohsen/css-to-angular-animations-and-styles.git"
+  },
+  "keywords": [
+    "css",
+    "angular",
+    "keyframes",
+    "styles",
+    "angular-animations",
+    "angular-styles"
+  ],
+  "bugs": {
+    "url": "https://github.com/MoustafaMohsen/css-to-angular-animations-and-styles/issues"
+  },
+  "homepage": "https://github.com/MoustafaMohsen/css-to-angular-animations-and-styles#readme"
 }
