--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "index.js"
+  ],
   "author": "MoustafaMohsen",
   "license": "ISC",
   "dependencies": {},
-  "main": "index.js",
+  "main": "./index",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MoustafaMohsen/css-to-angular-animations-and-styles.git"
